# Infinifix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  supported-models.md  troubleshooting.md
packaging/arch/: PKGBUILD
packaging/debian/: control  postinst  prerm
packaging/desktop/: infinifix.appdata.xml  infinifix.desktop
packaging/man/: infinifix.1
packaging/rpm/: infinifix.spec
packaging/suse/: infinifix.spec
scripts/: doctor.sh  install.sh  uninstall.sh
scripts/distros/: arch_pacman.sh  debian_apt.sh  fedora_dnf.sh  suse_zypper.sh
src/cpp/: CMakeLists.txt  probe.cpp
src/infinifix/: __init__.py  backup.py  distro.py  doctor.py  lock.py  main.py  paths.py  privacy.py  report.py  runner.py  ui.py
src/infinifix/data/rules/ucm2_overrides/: .keep
src/infinifix/data/rules/wireplumber/: 51-infinifix.conf
src/infinifix/modules/: __init__.py  audio_sof.py  firmware_fwupd.py  grub_and_initramfs.py  huawei_wmi.py  pipewire_wireplumber.py  sanity_checks.py
tests/: test_cli.py  test_distro.py  test_doctor_plan.py  test_paths.py  test_plan.py  test_privacy.py
